--- a/src/com/bateleur/app/App_resources/views/MasterView.fxml
+++ b/src/com/bateleur/app/App_resources/views/MasterView.fxml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,7 +13,6 @@
 <AnchorPane fx:id="root" prefHeight="640.0" prefWidth="884.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/8.0.191" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bateleur.app.controller.MasterController">
 	<children>
 		<com.bateleur.app.view.BBackgroundCanvas fx:id="backgroundCanvas" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-		<AnchorPane fx:id="canvasBorderBO" layoutX="10.0" layoutY="10.0" mouseTransparent="true" prefHeight="200.0" prefWidth="200.0" style="-fx-border-width: 0 1 0 1;" styleClass="border" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
 		<GridPane fx:id="lowerPane" layoutX="50.0" layoutY="96.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<columnConstraints>
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -29,14 +22,13 @@
 				<RowConstraints maxHeight="10000.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
-				<fx:include source="PlaybackView.fxml" fx:id="playback" GridPane.rowIndex="0"/>
-				<fx:include source="MusicListView.fxml" fx:id="musicList" GridPane.rowIndex="1"/>
+				<fx:include fx:id="playback" source="PlaybackView.fxml" GridPane.rowIndex="0" />
+				<fx:include fx:id="musicList" source="MusicListView.fxml" GridPane.rowIndex="1" />
 			</children>
 		</GridPane>
 		<AnchorPane fx:id="topBar" layoutX="-157.0" layoutY="-242.0" prefHeight="25.0" prefWidth="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<children>
-				<AnchorPane fx:id="topBarBG" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.0));" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-				<AnchorPane fx:id="topBarBO" layoutX="10.0" layoutY="10.0" mouseTransparent="true" prefHeight="200.0" prefWidth="200.0" style="-fx-border-width: 1 1 0 1;" styleClass="border" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+				<AnchorPane fx:id="topBarBG" opacity="0.3" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(to bottom, colorPlaybackBG, rgba(255, 255, 255, 0.0));" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
 				<AnchorPane fx:id="topBarFG" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 					<children>
 						<Label id="topBarLabel" fx:id="topBarLabel" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -44,7 +36,7 @@
 								<Font name="Arial" size="14.0" />
 							</font></Label>
 						<Button id="topBarDrag" mnemonicParsing="false" style="-fx-background-color: rgba(255, 255, 255, 0.0);" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-						<Button id="topBarClose" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: rgba(255, 255, 255, 0.0);" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+						<Button id="topBarClose" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 							<graphic>
 								<ImageView fitHeight="13.0" fitWidth="13.0" pickOnBounds="true" preserveRatio="true">
 									<image>
@@ -53,7 +45,7 @@
 								</ImageView>
 							</graphic>
 						</Button>
-						<Button id="topBarMaximize" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: rgba(255, 255, 255, 0.0);" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="0.0">
+						<Button id="topBarMaximize" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="0.0">
 							<graphic>
 								<ImageView fitHeight="13.0" fitWidth="13.0" pickOnBounds="true" preserveRatio="true">
 									<image>
@@ -62,7 +54,7 @@
 								</ImageView>
 							</graphic>
 						</Button>
-						<Button id="topBarMinimize" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: rgba(255, 255, 255, 0.0);" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="0.0">
+						<Button id="topBarMinimize" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="0.0">
 							<graphic>
 								<ImageView fitHeight="13.0" fitWidth="13.0" pickOnBounds="true" preserveRatio="true">
 									<image>
@@ -75,5 +67,6 @@
 				</AnchorPane>
 			</children>
 		</AnchorPane>
+		<AnchorPane fx:id="canvasBorderBO" layoutX="10.0" layoutY="10.0" mouseTransparent="true" prefHeight="200.0" prefWidth="200.0" style="-fx-border-width: 1 1 1 1;" styleClass="border" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
 	</children>
 </AnchorPane>
