Fix stutter when selecting a song.
This was caused by MusicListView rebuilding its entire list when this
occurred. The solution was to add code to only change the 'currently
playing' text instead of rebuilding the whole list.

--- a/src/com/bateleur/app/App_resources/css/StyleGlobal.css
+++ b/src/com/bateleur/app/App_resources/css/StyleGlobal.css
@@ -53,9 +53,9 @@
 
 /* Add a BG-colored fade to the top and bottom of the scroll pane. */
 .scroll-pane-border {
-	-fx-border-color: linear-gradient(to bottom, colorPlaybackBG, transparent)
+	-fx-border-color: linear-gradient(to bottom, white, transparent)
 	                  transparent
-	                  linear-gradient(to top   , colorPlaybackBG, transparent)
+	                  linear-gradient(to top   , white, transparent)
 	                  transparent;
 	-fx-border-style: solid;
 }
