--- a/src/com/bateleur/app/App_resources/views/MasterView.fxml
+++ b/src/com/bateleur/app/App_resources/views/MasterView.fxml
@@ -26,7 +26,7 @@
 				<fx:include fx:id="musicList" source="MusicListView.fxml" GridPane.rowIndex="1" />
 			</children>
 		</GridPane>
-		<AnchorPane fx:id="topBar" style="-fx-pref-height: __uiTitlebarVSize" layoutX="-157.0" layoutY="-242.0" prefHeight="25.0" prefWidth="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		<AnchorPane fx:id="topBar" style="-fx-pref-height: __uiTitleBarSize" layoutX="-157.0" layoutY="-242.0" prefHeight="25.0" prefWidth="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<children>
 				<AnchorPane fx:id="topBarBG" opacity="0.3" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(to bottom, white, rgba(255, 255, 255, 0.0));" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
 				<AnchorPane fx:id="topBarFG" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
